# ros_test_ws

./: .gitignore  README.md
src/publisher_subscriber_example/: CMakeLists.txt  package.xml
src/publisher_subscriber_example/msg/: RobotInfo.msg
src/publisher_subscriber_example/src/: pub_cpp_simple.cpp  pub_python_simple.py  sub_cpp_simple.cpp
src/publisher_subscriber_example/src/custom_message/: robot_A.cpp  robot_B.py
src/publisher_subscriber_example/src/simple/: pub_cpp_simple.cpp  sub_python_simple.py
